--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graphletjs",
   "version": "0.0.1",
   "description": "Manage an extensible property graph database.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage"
