--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Manage an extensible property graph database.",
   "main": "src/index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "test": "jest",
     "coverage": "jest --coverage"
   },
@@ -28,6 +29,11 @@
   },
   "homepage": "https://github.com/jennerhanni/GraphletJS#readme",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
