--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --mode production",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "lint": "eslint .",
+    "lintfix": "eslint . --fix"
   },
   "jest": {
     "testEnvironment": "node",
@@ -32,6 +34,8 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "babel-loader": "^9.1.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.1",
     "jest": "^29.7.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
